--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -87,8 +87,9 @@
 {
     font-size: 22px;
     font-weight: bold;
-    margin-left: 548px;
+    margin-left: 20px;
     margin-top: 20px;
+    text-align: center;
 
 }
 
