--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -76,8 +76,8 @@
                         <div class="post-input-settings">
                             <input type="hidden" name="hidden-groupId" value="@Model.GroupWithId.Id" />
                             <input type="text" name="text-input" id="post-input" class="post-input" placeholder="Express yourself..." />
-                            <input type="text" name="photo-input" id="photo-input" class="photo-input" placeholder="Or share a photo url here..." />
-                            <input type="text" name="video-input" id="video-input" class="video-input" placeholder="Or a YouTube video url here..." />
+                            <input type="text" name="photo-input" id="photo-input" class="photo-input" placeholder="Photo url..." />
+                            <input type="text" name="video-input" id="video-input" class="video-input" placeholder="YouTube video url..." />
                         </div>
                     </div>
                 </div>
